<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".Register"
    android:background="@drawable/color_gradient">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_gravity="center">

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-39dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="15dp">

                <TextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/lobster_two_italic"
                    android:text="REGISTRATION"
                    android:textColor="@color/colorPrimary"
                    android:textSize="35sp" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/full_name"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/nameText"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/email"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/emailText"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/gender"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>

                <RadioGroup
                    android:id="@+id/radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp">

                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        tools:layout_editor_absoluteX="56dp"
                        tools:layout_editor_absoluteY="589dp" />

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        tools:layout_editor_absoluteX="226dp"
                        tools:layout_editor_absoluteY="589dp" />
                </RadioGroup>

                <TextView
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/password"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/passText"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:id="@+id/confirmpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/confirm_password"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/confirmText"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColor="@color/colorAccent"/>

                <Button
                    android:id="@+id/btnregister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/btn_bg"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/resend_authentication_email"
                    android:layout_gravity="center"
                    android:textColor="@color/black"/>

                <ProgressBar
                    android:id="@+id/pb_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView1"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:visibility="gone"/>

            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</LinearLayout>