<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Path"
    android:orientation="vertical"
    android:background="@drawable/color_gradient">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:src="@drawable/lost"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reportlost"
                        android:textSize="35sp"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:paddingStart="5dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@color/white"
                        android:text="@string/reportlostdsc"
                        android:textSize="20sp"
                        android:typeface="serif"
                        android:textColor="@color/black"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="10dp"/>

                    <Button
                        android:id="@+id/proceedBA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_bg"
                        android:layout_gravity="right"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/proceed"
                        android:onClick="Proceed"
                        android:textColor="@color/white"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/found"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reportfound"
                        android:textSize="35sp"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:paddingStart="5dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/reportfounddsc"
                        android:textSize="20sp"
                        android:typeface="serif"
                        android:textColor="@color/black"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="10dp"/>

                    <Button
                        android:id="@+id/proceedBsc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_bg"
                        android:layout_gravity="right"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/proceed"
                        android:onClick="Proceed"
                        android:textColor="@color/white"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>