<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".Login"
    android:background="@drawable/color_gradient">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="15dp">

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/lobster_two_italic"
                android:text="LOGIN"
                android:textColor="@color/colorPrimary"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/email"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/emaillogin"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/password"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/passlogin"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="25dp"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent"/>

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/btn_bg"
                android:text="@string/login"
                android:textSize="15sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/forgot_password"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_gravity="center"/>

            <ProgressBar
                android:id="@+id/pb_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>