<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddLostItem"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/color_gradient">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_gravity="center">

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-39dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="15dp">

                <TextView
                    android:id="@+id/lostTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/lobster_two_italic"
                    android:text="ADD LOST ITEM"
                    android:textColor="@color/colorPrimary"
                    android:textSize="35sp" />

                <TextView
                    android:id="@+id/lostItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/lostItemName"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/lostItemNameText"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/desc"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/descriptionText"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:inputType="text"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/category"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"/>

                <TextView
                    android:id="@+id/dateFound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/dateFound"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/dateFoundText"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:inputType="text"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:id="@+id/collection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/collection"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"/>

                <TextView
                    android:id="@+id/upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="Upload Image"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/takePic"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/btn_bg"
                    android:text="Upload"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>

<!--                IMPLEMENT PHOTO UPLOAD      -->
                <ImageView
                    android:id = "@+id/imagePreview"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    />

                <ProgressBar
                    android:id="@+id/pb_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView1"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/btnadd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/btn_bg"
                    android:text="@string/add"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>

            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</LinearLayout>